--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src = "funcao.js"></script>
+        <script src = "funcoes.js"></script>
         <title>Carros</title>
     </head>
     <style>
